# projet_methodologique

./: .gitignore  pyproject.toml
src/code/: .RData  .Rhistory  figure1.R  figure10.R  figure11.R  figure12.R  figure2.R  figure3.R  figure4.R  figure5.R  figure6.R  figure7.R  figure8.R  figure9.R  slides.R
src/code/data/: 1KGP_100PC.Rda  1KGP_colours.R  df.rds  pvec.rds
src/presentation/: main.nav  main.snm  main.tex
src/report/: biblio.bib  main.aux  main.bbl  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.loc  main.out  main.soc  main.tex  notes.bbl  notes.blg  notes.soc  notes.tex
src/selective_inference/: __init__.py  main.py  main.qmd
src/selective_inference/lasso_regression/: lasso.py
